encode email address on announce section

--- a/overrides/main.html
+++ b/overrides/main.html
@@ -4,5 +4,5 @@
 <span class="twemoji circle-exclamation">
     {% include ".icons/fontawesome/solid/circle-exclamation.svg" %}
   </span>
-  <small>This is a draft version of the Narrowlink documentation and it is scheduled to be released in the summer. To access it early, please keep in touch with us at <strong>opensource{a†}narrowlink.com</strong>.</small>
+  <small>This is a draft version of the Narrowlink documentation and it is scheduled to be released in the summer. To access it early, please keep in touch with us at <strong>&#111;&#112;&#101;&#110;&#115;&#111;&#117;&#114;&#099;&#101;&#064;&#110;&#097;&#114;&#114;&#111;&#119;&#108;&#105;&#110;&#107;&#046;&#099;&#111;&#109;</strong>.</small>
 {% endblock %}
