--- a/overrides/main.html
+++ b/overrides/main.html
@@ -1,8 +1,29 @@
 {% extends "base.html" %}
 
+
+{% block site_meta %}
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  {% if page.meta and page.meta.description %}<meta name="description" content="{{ page.meta.description }}" />{% elif config.site_description %}<meta name="description" content="{{ config.site_description }}" />{% endif %}
+  {% if page.meta and page.meta.author %}<meta name="author" content="{{ page.meta.author }}" />{% elif config.site_author %}<meta name="author" content="{{ config.site_author }}" />{% endif %}
+  {% if page.canonical_url %}<link rel="canonical" href="{{ page.canonical_url }}" />{% endif %}
+  {% if page.previous_page %}<link rel="prev" href="{{ page.previous_page.url | url }}" />{% endif %}
+  {% if page.next_page %}<link rel="next" href="{{ page.next_page.url | url }}" />{% endif %}
+  <link rel="icon" href="{{ config.theme.favicon | url }}" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon/favicon-16x16.png">
+  <link rel="manifest" href="/assets/favicon/site.webmanifest">
+  <link rel="mask-icon" href="/assets/favicon/safari-pinned-tab.svg" color="#5bbad5">
+  <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon/apple-touch-icon.png">
+  <meta name="msapplication-TileColor" content="#00aba9">
+  <meta name="theme-color" content="#ffffff">
+{% endblock %}
+
 {% block announce %}
 <span class="twemoji circle-exclamation">
-    {% include ".icons/fontawesome/solid/circle-exclamation.svg" %}
-  </span>
-  <small>This is a draft version of the Narrowlink documentation and it is scheduled to be released in the summer. To access it early, please keep in touch with us at <strong>&#111;&#112;&#101;&#110;&#115;&#111;&#117;&#114;&#099;&#101;&#064;&#110;&#097;&#114;&#114;&#111;&#119;&#108;&#105;&#110;&#107;&#046;&#099;&#111;&#109;</strong>.</small>
+  {% include ".icons/fontawesome/solid/circle-exclamation.svg" %}
+</span>
+<small>This is a draft version of the Narrowlink documentation and it is scheduled to be released in the summer. To
+  access it early, please keep in touch with us at
+  <strong>&#111;&#112;&#101;&#110;&#115;&#111;&#117;&#114;&#099;&#101;&#064;&#110;&#097;&#114;&#114;&#111;&#119;&#108;&#105;&#110;&#107;&#046;&#099;&#111;&#109;</strong>.</small>
 {% endblock %}
